--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-ui-router": "^0.3.2",
-    "bulma": "^0.2.3"
+    "bulma": "^0.2.3",
+    "jquery": "^3.1.1"
   }
 }
